<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarDetailsActivity" >

    <ImageView
        android:id="@+id/cd_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/bug" />

    <TextView
        android:id="@+id/cd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cd_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
         android:text="@string/cd_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cd_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cd_name"
        android:layout_below="@+id/cd_name"
        android:layout_marginTop="25dp"
        android:text="@string/cd_brand_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cd_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cd_brand"
        android:layout_below="@+id/cd_brand"
        android:layout_marginTop="26dp"
        android:text="@string/cd_year_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>